[package]
name = "jieba-rs"
version = "0.6.0"
authors = ["messense <messense@icloud.com>", "Paul Meng <me@paulme.ng>"]
categories = ["text-processing"]
description = "The Jieba Chinese Word Segmentation Implemented in Rust"
keywords = ["nlp", "chinese", "segmenation"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/jieba-rs"
edition = '2018'

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
criterion = "0.3"
rand = { git = "https://github.com/mesalock-linux/rand-sgx" }
wasm-bindgen-test = "0.3.0"

[target.'cfg(unix)'.dev-dependencies]
jemallocator = "0.3.2"

[[bench]]
name = "jieba_benchmark"
harness = false
required-features = ["tfidf", "textrank"]

[dependencies]
regex = { git = "https://github.com/mesalock-linux/regex-sgx"}
lazy_static = "1.0"
phf = { git = "https://github.com/EmisonLu/rust-phf-sgx.git" }
hashbrown = "0.8"
cedarwood = { git = "https://github.com/EmisonLu/cedarwood-sgx.git" }
ordered-float = { version = "2.0", optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
sgx_libc = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[build-dependencies]
phf_codegen = "0.8"

[features]
default = ["default-dict"]
default-dict = []
tfidf = ["ordered-float"]
textrank = ["ordered-float"]

[workspace]
members = [
    ".",
    "capi",
    "examples/weicheng"
]
