[package]
name = "jieba-capi"
version = "0.1.0"
authors = ["messense <messense@icloud.com>"]
edition = "2018"

[dependencies]
jieba-rs = { version = "0.6.0", path = "../", features = ["textrank", "tfidf"] }
c_fixed_string = "0.2.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
sgx_libc = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[lib]
crate-type = ["cdylib"]
